update: change an api from /project/info to /api/project/info; update api document.

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -1,5 +1,44 @@
 ## 项目相关
 
+### 获取项目详情
+
+#### 请求类型与地址
+
+```
+GET /api/project/info
+```
+
+#### 请求参数
+
+|参数名|类型|必填|描述|默认值|参考值|
+|---|---|---|---|---|---|
+|id|str|是|Project ID|-|project1|
+
+#### 返回正确JSON示例
+
+```
+{
+  "data": {
+    "_id": "project1",
+    "detail": "project1的接口测试项目",
+    "create_time": {
+      "$date": 1518317773380
+    },
+    "is_del": false,
+    "latest_test": {
+      "$oid": "5b3c697647de9d6725b58d96"
+    },
+    "token": "48f6011f8803498db4468a4f32ed7140",
+    "tags": [
+      "dev",
+      "online"
+    ]
+  },
+  "status": "success",
+  "message": ""
+}
+```
+
 ### 获取项目tags列表
 
 #### 请求类型与地址
@@ -41,7 +80,7 @@ GET /api/project/get-tags
 
 ## 测试数据相关
 
-### 获取Project列表以及每个Project最新测试结果
+### 获取项目列表以及每个项目最新测试结果
 
 #### 请求类型与地址
 
