fix: get result detail; update api document.

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -146,3 +146,38 @@ GET /api/test-result
 |id|str|否|TestResult ID|-|5b3c697647de9d6725b58d96|
 |pro_id|str|否|Project ID|-|project1|
 |tag|str|否|筛选某个Project中符合tag的测试结果|-|online|
+
+如果有id参数，则查询该测试结果的详细数据；
+如果没有id而有pro_id，则查询该项目下的测试结果简要数据。
+
+#### 返回正确JSON示例
+
+```
+{
+  "data": {
+    "was_successful": false,
+    "total": 3,
+    "failures": 1,
+    "errors": 0,
+    "success": 2,
+    "skipped": 0,
+    "run_time": 3.10271954536438,
+    "version": "0.0.1.1",
+    "project": "project1",
+    "create_time": {
+      "$date": 1518318246599
+    },
+    "tag": "default",
+    "details": [
+      {
+        "status": "failures",
+        "note": "Traceback (most recent call last):\n  File \"/home/y/code/api-test/common/test_apis.py\", line 41, in test_event\n    self.assertTrue(res_dict['status'], msg=\"返回的结果正确\")\nAssertionError: False is not true : 返回的结果正确\n",
+        "explain": "\n        测试event接口",
+        "test_case": "test_event"
+      }
+    ]
+  },
+  "status": "success",
+  "message": ""
+}
+```
