update api document; add favicon.ico and route;

--- a/doc/接口文档.md
+++ b/doc/接口文档.md
@@ -139,18 +139,17 @@ GET /api/test-result/latest
 GET /api/test-result
 ```
 
-#### 请求参数
+#### 查询某一条测试数据
+
+##### 请求参数
+
+有id参数，查询该测试结果的详细数据。
 
 |参数名|类型|必填|描述|默认值|参考值|
 |---|---|---|---|---|---|
 |id|str|否|TestResult ID|-|5b3c697647de9d6725b58d96|
-|pro_id|str|否|Project ID|-|project1|
-|tag|str|否|筛选某个Project中符合tag的测试结果|-|online|
 
-如果有id参数，则查询该测试结果的详细数据；
-如果没有id而有pro_id，则查询该项目下的测试结果简要数据。
-
-#### 返回正确JSON示例
+##### 返回正确JSON示例
 
 ```
 {
@@ -179,5 +178,55 @@ GET /api/test-result
   },
   "status": "success",
   "message": ""
+}
+```
+
+#### 查询某个项目下的测试数据
+
+#### 请求参数
+
+没有id而有pro_id，查询该项目下的测试结果简要数据。
+
+|参数名|类型|必填|描述|默认值|参考值|
+|---|---|---|---|---|---|
+|pro_id|str|否|Project ID|-|project1|
+|tag|str|否|筛选某个Project中符合tag的测试结果|-|online|
+
+#### 返回正确JSON示例
+
+```
+{
+    "data": {
+        "results": [
+            {
+                "_id": {
+                    "$oid": "5b3c697647de9d6725b58d96"
+                },
+                "was_successful": false,
+                "failures": 1,
+                "errors": 0,
+                "success": 180,
+                "run_time": 23.89368200302124,
+                "version": "18.07.04.01\n",
+                "create_time": {
+                    "$date": 1530685814147
+                },
+                "tag": "online",
+                "details": [
+                    {
+                        "note": "Traceback (most recent call last):\n  File \"/home/y/api_test/",
+                        "status": "failures",
+                        "test_case": "test_forbidden",
+                        "explain": "\n        1. aaa"
+                    }
+                ]
+            }
+        ],
+        "p": 1,
+        "ps": 30,
+        "total": 1
+    },
+    "status": "success",
+    "message": ""
 }
 ```
